# vigil_cv

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
benchmark/: run_benchmark.py
data/: dataset.py  download_mvtec.py
demo/: app.py
export/: calibration.py  export_onnx.py  export_tensorrt.py
inference/: base.py  engine_onnx.py  engine_pytorch.py  engine_tensorrt.py  stream.py
models/: autoencoder.py  backbone.py  patchcore.py
notebooks/: 01_data_exploration.ipynb  02_model_analysis.ipynb  03_benchmark_results.ipynb
tests/: test_benchmark.py  test_export.py  test_inference.py
training/: loss.py  train.py
